@@ -5371,7 +5371,8 @@ sub parseMsg {
 			error("Password Error\n", "connection");
 			if (!$config{'XKore'}) {
 				message("Enter Password Again: ", "input");
-				$msg = $interface->getInput(-1);
+				# Set -9 on getInput timeout field mean this is password field
+				$msg = $interface->getInput(-9);
 				configModify('password', $msg, 1);
 				$timeout_ex{'master'}{'time'} = 0;
 				$conState_tries = 0;
